play-pit/Collaboration/Confluence/confluence-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
 name: confluence
 labels:
  name: confluence
