play-pit/Collaboration/Confluence/confluence-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: confluence-server
 namespace: confluence
 labels:
  app: confluence-server
spec:
 replicas: 1
 selector:
  matchLabels:
   app: confluence-server
 template:
  metadata:
   labels:
    app: confluence-server
  spec:
   securityContext:
    fsGroup: 1000
   containers:
     - name: confluence-server
       image: atlassian/confluence-server
       imagePullPolicy: "IfNotPresent"
       ports:
        - name: http-port
          containerPort: 8090
       volumeMounts:
         - name: confluence-home
           mountPath: /var/atlassian/application-data/confluence
   volumes:
     - name: confluence-home
       persistentVolumeClaim:
         claimName: confluence-server-pvclaim
