play-pit/Collaboration/Confluence/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: confluence-server
 namespace: confluence
 labels:
  app: confluence-server
spec:
 replicas: 1
 selector:
  matchLabels:
   app: confluence-server
 template:
  metadata:
   labels:
    app: confluence-server
  spec:
   securityContext:
    fsGroup: 1000
   containers:
     - name: confluence-server
       image: atlassian/confluence-server
       imagePullPolicy: "IfNotPresent"
       ports:
        - name: http-port
          containerPort: 8080
       volumeMounts:
         - name: confluence-home
           mountPath: /var/atlassian/application-data/confluence
         - name: server-xml-volume
           mountPath: /opt/atlassian/confluence/conf/server.xml
           subPath: server.xml
   volumes:
     - name: confluence-home
       persistentVolumeClaim:
         claimName: confluence-server-pvclaim
     - name: server-xml-volume
       configMap:
         name: server-xml
