play-pit/Collaboration/Confluence/confluence-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: confluence-server-service
  namespace: confluence
  labels:
    app: confluence-server
spec:
  type: ClusterIP
  ports:
   - port: 8090
     targetPort: 8090
     protocol: TCP
  selector:
    app: confluence-server
